--- a/src/components/CourseCatalog/course-catalog.css
+++ b/src/components/CourseCatalog/course-catalog.css
@@ -4,7 +4,7 @@
       font-family: Arial, sans-serif;
       display: flex;
       width: 100%;
-      height: 100vh;
+      height: 80vh;
       padding: 20px;
       box-sizing: border-box;
   }
@@ -30,10 +30,10 @@
 
   .course-catalog-course-container {
       width: 80%;
-      overflow-y: scroll;
+      overflow-y: auto;
       padding: 10px;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
       gap: 10px;
       box-sizing: border-box;
   }
