--- a/src/screens/CourseEnrollment/course-enrollment.css
+++ b/src/screens/CourseEnrollment/course-enrollment.css
@@ -5,15 +5,50 @@
     box-sizing: border-box;
     padding: 20px;
   }
+
+  .enrollment-handler {
+    width: 30%;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+  }
+
+  .calendar-handler {
+    width: 70%;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .calendar-handler p {
+    color: #074289;
+    font-size: 30px;
+  }
+
+  .toggle-button {
+    background-color: #D04635;
+    padding: 15px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 10px;
+  }
+  
+  .toggle-button:hover {
+    background-color: #C0392B;
+  }
   
   .student-search-container {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
   
   .enrollment-course-container {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -23,28 +58,28 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    border-radius: 28px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    padding: 10px 20px;
-    border: 22px solid #b0c4de;
-    margin: 0px 10px 10px 0px
+    border-radius: 11px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 8px 8px;
+    border: 9px solid #b0c4de;
   }
   
   .student-search-input {
-    padding: 25px;
+    padding: 4px;
     font-size: 1rem;
     border: none;
-    border-radius: 18px;
+    border-radius: 7px;
     margin-right: 20px;
+    margin-left: 5px;
     flex: 1;
-    width: 100%; /* Make input take full available width */
+    width: 100%;
     color: #333;
     background-color: #f2f4f6;
   }
   
   .student-search-button {
     background-color: #D04635;
-    padding: 15px;
+    padding: 6px;
     border-radius: 8px;
     border: none;
     cursor: pointer;
@@ -57,7 +92,6 @@
   
   .student-search-course-container, .enrollment-course-container {
     flex: 1;
-    overflow-y: auto;
   }
   
   .student-search-course-card, .enrollment-course-card {
@@ -65,18 +99,10 @@
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 10px;
+    border-radius: 3px;
+    padding: 8px;
+    margin-bottom: 4px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-
-  .student-search-course-card {
-    margin: 0px 10px 0px 0px
-  }
-  
-  .enrollment-course-card {
-    margin: 0px 0px 0px 10px
   }
 
   .student-search-course-card > p, .enrollment-course-card > p {
