--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -8,7 +8,7 @@ nav {
 }
 .visitor-nav {
   justify-content: flex-end;
-  background-color: #DBECF4;
+  background-color: white;
 }
 .nav-right {
   display: flex;
@@ -40,8 +40,10 @@ nav {
 .search-icon {
   cursor: pointer;
   background-color: #bf4343;
-  padding: 10px;
+  padding: 8px;
   color: white;
+  border-radius: 6px;
+  height: 0.8em;
 }
 
 .signin-button {
