--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,24 +1,45 @@
 nav {
   display: flex;
   justify-content: space-between;
-  
-
-  background-color: white; /* Example background */
+  background-color: white; 
   width: 100%;
+  min-height: 10%;
 }
 .visitor-nav {
   justify-content: flex-end;
   background-color: white;
 }
+
 .nav-right {
   display: flex;
-  align-items: center;
+  align-items: center; 
+  justify-content: flex-end; 
+  margin-right: 14px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+
 }
+
+.signin-button {
+  background-color: #bf4343;
+  color: white;
+  font-size: 16px;
+  padding: 11px 15px; 
+  border-radius: 4px; 
+  text-align: center; 
+  cursor: pointer; 
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
+  transition: background-color 0.3s ease; 
+}
+
+.signin-button:hover {
+  background-color: #a63737; 
+}
+
 
 .dashboard-nav {
   display: flex;
   align-items: center;
- 
   justify-content: space-between;
   width: 100%;
 }
@@ -26,7 +47,7 @@ nav {
 .search-container {
   display: flex;
   align-items: center;
-  margin: 0 auto; /* Centers the search bar */
+  margin: 0 auto; 
   width: 300px;
 }
 
@@ -45,16 +66,6 @@ nav {
   border-radius: 6px;
   height: 0.8em;
 }
-
-.signin-button {
-  background-color: #bf4343;
-  color: white;
-  font-size: 16px;
-  height: 20px;
-  margin-bottom: auto;
-  padding: 8px 16px;
-}
-
 
 a,
 a:link,
@@ -92,8 +103,8 @@ scale: 1.05;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 1em #646cff);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #61dafb);
 }
