--- a/src/components/CourseCatalog/course-catalog.css
+++ b/src/components/CourseCatalog/course-catalog.css
@@ -4,8 +4,8 @@
       font-family: Arial, sans-serif;
       display: flex;
       width: 100%;
-      height: 80vh;
-      padding: 20px;
+      height: 78vh;
+      padding: 15px;
       box-sizing: border-box;
   }
 
@@ -15,6 +15,37 @@
       background-color: #FFF;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+  }
+
+  .filter-container>button {
+    background-color: #D04635;
+    padding: 15px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .filter-container>form {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .filter-container>form>div {
+      color: #BF4343;
+      margin-bottom: 100px;
+  }
+
+  .filter-container>form>button {
+      margin-bottom: 50px;
+      background-color: #D04635;
+      padding: 15px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
   }
 
   .filter-container select {
@@ -31,7 +62,7 @@
   .course-catalog-course-container {
       width: 80%;
       overflow-y: auto;
-      padding: 10px;
+      padding: 0px 10px 10px 10px;
       display: flex;
       flex-direction: column;
       gap: 10px;
